# AlphaAHB-V5-Specification

./: .gitignore  COMPREHENSIVE_IMPLEMENTATION_ROADMAP.md  CONTRIBUTING.md  CRITICAL_IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_PROGRESS_REPORT.md  LICENSE  Makefile  PHASE1_PROGRESS_REPORT.md  README.md
.bsp/: scala-cli.json
.claude/: settings.local.json
.github/workflows/: ci.yml  markdown-link-check-config.json
.scala-build/: ide-envs.json  ide-inputs.json
.scala-build/.bloop/: AlphaAHB-V5-Specification_b3557dfd11-ba43a91e72.json
docs/: README.md  alphaahb-v5-specification.md  api-reference.md  dual-target-support.md  examples-guide.md  faq.md  getting-started.md  tooling-guide.md
documentation/: PRODUCTION_DEPLOYMENT_GUIDE.md
examples/: advanced-arithmetic.c  cpu-implementation.c  cpu-usage-examples.c  neural-network.c  vector-operations.c
softcores/: Makefile  README.md  alphaahb_v5_core.sv  alphaahb_v5_tb.sv
softcores/chisel/: AlphaAHBV5Core.scala  CHISEL_SETUP_REPORT.md  Makefile  README.md  build.sbt  build.sc  compile_output.txt
softcores/chisel/.bsp/: scala-cli.json
softcores/chisel/.scala-build/: ide-inputs.json
softcores/chisel/project/: build.properties  plugins.sbt
softcores/chisel/tests/: AlphaAHBV5CoreTest.scala  CompleteTest.scala
softcores/systemverilog/: Makefile  README.md  synthesis.tcl
softcores/systemverilog/tests/: DEBUG_REPORT.md  FINAL_TEST_SUMMARY.md  README.md  TEST_FIXES_REPORT.md  complete_test.tcl  (+4 more)
specs/: assembly-language.md  bus-protocol.md  cpu-design.md  floating-point-arithmetic.md  instruction-encodings.md  instruction-timing.md  register-architecture.md  system-programming.md
tests/: Makefile  ieee754-compliance.c  instruction-tests.c  performance-benchmarks.c  run-tests.sh
tooling/: ENHANCED_TOOLING_SUMMARY.md  README.md  build.sh  test_simple.py
tooling/ai/: optimization_assistant.py
tooling/assembler/: alphaahb_as.py
tooling/benchmarking/: benchmark_suite.py
tooling/codegen/: code_generator.py
tooling/compiler/: CMakeLists.txt  README.md
tooling/compiler/src/Alpha/: AlphaTargetMachine.td
tooling/compiler/src/Alpham/: AlphamTargetMachine.td
tooling/compliance/: compliance_checker.py
tooling/debugger/: alphaahb_gdb.py
tooling/disassembler/: alphaahb_objdump.py
tooling/docs/: interactive_docs.py
tooling/integration/: ide_integration.py
tooling/performance/: performance_modeler.py
tooling/security/: security_analyzer.py
tooling/simulator/: alphaahb_sim.py
tooling/tests/: test_framework.py
tooling/visualization/: pipeline_visualizer.py
(+29 files in other folders)
